2008-04-01 mentaer <sstein@geo.unizh.ch>
	  reenabled deleteAllFeaturesPlugIn and MrSIDPlugin 

2008-04-01 mentaer <sstein@geo.unizh.ch>
	  Tried to identify why warping runs endless/crashes JUMP 
	  when layer contains only one point bug [1920024] 
	  (note this does not happen for polygons).
	  I found the reason why it runs in a loop and added a check. 
	  However creating a triangle for the warping fails for the
	  first time with only 1 point (since we can not create a 
	  triangle) but it works surprisingly for the 2nd time.
	  I added therefore only a message to WarpingPanel that 
	  motivates the user to do a 2nd try.
	  modified: com/vividsolutions/jump/warp/Triangulator.java
	  			com/vividsolutions/jump/workbench/ui/warp/WarpingPanel.java
	  
2008-03-31 mentaer <sstein@geo.unizh.ch>
	  replaced "Transfer Attributes" from SIGLE with Spatial Join from JUMP
	  achieved by SIGLE "Spatial Join" deactivation in OpenJUMPConfiguration
	  and JUMP SpatialJoin change of menu position in JumpConfiguration
	  update of language files
	  
2008-03-28 mentaer <sstein@geo.unizh.ch>
	  exchanged SrcA and SrcB so that spatial criteria is readable 
	  in dialog from top to bottom 
	  changed: com/vividsolutions/jump/ui/plugin/analysis/SpatialJoinPlugIn.java
	  		   
2008-03-27 mentaer <sstein@geo.unizh.ch>
	  hopefuly fixed bug (1775862) in Transfer Attributes Plugin 
	  changed: org/openjump/core/ui/plugin/tools/SpatialJoinPlugIn.java
	  		   com/vividsolutions/jump/tools/AttributeMapping.java
	  Btw.: This function is also acomplished by 
	  		   Tools\Analysis\Spatial Join of Geometries...
	  
2008-03-27 mentaer <sstein@geo.unizh.ch>
	  Added transfer of attributes when Thiessen polygons are created
	  changed: org/openjump/core/ui/plugin/tools/CreateThiessenPolygonsPlugIn.java
	  note:  translation needs to be added (defered because Peppe works on it)
	  
2008-03-25 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/OpenJumpConfiguration.java,